Updated Cordova to version 6.1 which doens't depend on UIWebView anymore.  This was required to avoid errors submitting to app store. Removed the bluetooth ios usage description from codenameone_library_appended.properties and made the library add this at runtime in the simulator.  This provides more flexibility for the user to change the description themeselves. https://github.com/codenameone/CodenameOne/issues/3178

--- a/BTDemo/codenameone_settings.properties
+++ b/BTDemo/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Mon Aug 14 12:42:42 IDT 2017
+#Tue Jul 21 06:00:25 PDT 2020
 codename1.ios.appid=Q5GHSKAL2F.com.codename1.btle
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -10,6 +10,7 @@ codename1.arg.ios.project_type=ios
 foobarfoo=This is a description of what we are going to do
 codename1.arg.ios.interface_orientation=UIInterfaceOrientationPortrait\:UIInterfaceOrientationPortraitUpsideDown\:UIInterfaceOrientationLandscapeLeft\:UIInterfaceOrientationLandscapeRight
 codename1.displayName=BTDemo
+codename1.arg.ios.pods.platform=,11.0
 codename1.android.keystoreAlias=
 codename1.ios.release.certificate=
 codename1.arg.ios.background_modes=,bluetooth-central,bluetooth-peripheral
@@ -21,7 +22,7 @@ codename1.arg.android.release=true
 codename1.arg.ios.statusbar_hidden=false
 codename1.languageLevel=5
 codename1.android.keystore=
-codename1.arg.ios.pods=,Cordova
+codename1.arg.ios.pods=,Cordova,Cordova ~> 6.1
 codename1.vendor=CodenameOne
 codename1.arg.win.ver=8
 codename1.ios.certificatePassword=
