Fixed name of CN1Bluetooth lib - was CN1Bluethooth which caused all kinds of problems since the name had been corrected in CN1Libs. Also fixed issue with synchronous boolean methods in Bluetooth class on Android  - NPEs.

--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,6 @@ Temporary Items
 /BTDemo/nbproject/private/
 /BTDemo/build/
 /BTDemo/lib/impl/
-/CN1Bluethooth/nbproject/private/
-/CN1Bluethooth/build/
+/CN1Bluetooth/nbproject/private/
+/CN1Bluetooth/build/
+/CN1Bluetooth/dist/
