--- a/CN1Bluetooth/nbproject/project.properties
+++ b/CN1Bluetooth/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=CN1Bluethooth
+application.title=CN1Bluetooth
 application.vendor=Codename One
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -27,26 +27,26 @@ debug.test.modulepath=\
     ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CN1Bluethooth.jar
+dist.jar=${dist.dir}/CN1Bluetooth.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.CLDC11.jar=lib/CLDC11.jar
-file.reference.CodenameOne.jar=lib/CodenameOne.jar
 file.reference.CodenameOne_SRC.zip=lib/CodenameOne_SRC.zip
-file.reference.CN1Bluethooth-override=override
+file.reference.CN1Bluetooth-override=override
 file.reference.json.zip=lib/json.zip
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json.zip}:\
     ${file.reference.CLDC11.jar}:\
-    ${file.reference.CodenameOne.jar}:\
     ${file.reference.CodenameOne_SRC.zip}:\
-    ${file.reference.CN1Bluethooth-override}
+    ${reference.CodenameOne.jar}:\
+    ${file.reference.CN1Bluetooth-override}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -63,6 +63,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -71,10 +72,14 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=CN1Bluetooth
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.CodenameOne=../../../cn1/CodenameOne
+reference.CodenameOne.jar=${project.CodenameOne}/dist/CodenameOne.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
