--- a/CN1Bluetooth/codenameone_library_appended.properties
+++ b/CN1Bluetooth/codenameone_library_appended.properties
@@ -3,7 +3,7 @@
 #is an appended type property.
 #
 #Wed Jan 09 17:59:31 IST 2013
-codename1.arg.android.xpermissions=<uses-permission android:name="android.permission.BLUETOOTH"/><uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/><uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+codename1.arg.android.xpermissions=<uses-permission android:name="android.permission.BLUETOOTH"/><uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/><uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 codename1.arg.ios.pods=,Cordova ~> 6.1
 codename1.arg.ios.pods.platform=,11.0
 codename1.arg.ios.add_libs=;CoreBluetooth.framework;
